# examples

./: .beamignore  .gitignore  README.md  beam  pyproject.toml  pytest.ini
01_getting_started/: .beta9ignore  quickstart.py
02_customizing_environment/: custom_image.py  gpu_acceleration.py  using_secrets.py
03_endpoint/: creating_endpoint.py  huggingface-inference.py  keep_warm.py  preload_models.py
04_task_queue/: async_task.py  task_callbacks.py
05_function/: run_remotely.py  scaling_out.py  sharing_state.py
06_volume/: mounting_volumes.py  reading_and_writing_data.py  volume_use.py
07_outputs/: outputs.py
09_sd-1.5_load_local_weights/: README.md  app.py
10_experimental/: signal-example-inference.py  signal-example-train.py
benchmarks/: README.md
blender/: app.py  render.py  render_test.json
callbacks/: README.md  app.py
civitai-clone/: app.py
colpali/: app.py  invoke.py
custom_images/: README.md  app.py
endpoints/: README.md  app.py
finetune-peft/: finetune.py  inference.py
finetuning-gemma-tutorial/: README.md
functions/: README.md  app.py
gpu_acceleration/: README.md  app.py
huggingface-clone/: app.py
huggingface_clone/: app.py
huggingface_inference/: README.md  app.py
jupyter-notebooks/: beam-notebook.ipynb
jupyter_notebooks/: beam-notebook.ipynb
keep_warm/: README.md  app.py
mcp-beam/: README.md  docs.txt  pyproject.toml  server.py
mcp_server/: docs.txt  pyproject.toml  server.py
ollama/: README.md  app.py  test.py
open_webui/: README.md  app.py
outputs/: .beamignore  README.md  app.py
quickstart/: app.py  (+1 more)
(+195 files in other folders)
